--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "none",
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "trailingComma": "none",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
